Actualización de la animación y corrección de errores en niveles

--- a/Menu/Menu.vcxproj
+++ b/Menu/Menu.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -111,10 +111,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="EscenarioInformacion.cpp" />
+    <ClCompile Include="FuncionesMain.cpp" />
+    <ClCompile Include="Escenarios\AnimacionEntrada.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HambreCeroBiblioteca.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="audios\FloatingTrees.wav" />
+    <Media Include="audios\Key.wav" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
