--- a/Menu/Menu.vcxproj
+++ b/Menu/Menu.vcxproj
@@ -115,6 +115,7 @@
     <ClCompile Include="FuncionesMain.cpp" />
     <ClCompile Include="Escenarios\AnimacionEntrada.cpp" />
     <ClCompile Include="Juego1.cpp" />
+    <ClCompile Include="Juego2.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="ElejirJuego.cpp" />
   </ItemGroup>
