--- a/Menu/Menu.vcxproj
+++ b/Menu/Menu.vcxproj
@@ -111,6 +111,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ChanchoAnimacion.cpp" />
     <ClCompile Include="Config.cpp" />
     <ClCompile Include="Escenarios\EscenarioInformacion.cpp" />
     <ClCompile Include="Figuras.cpp" />
@@ -118,7 +119,7 @@
     <ClCompile Include="Escenarios\AnimacionEntrada.cpp" />
     <ClCompile Include="Globals.cpp" />
     <ClCompile Include="Juego1.cpp" />
-    <ClCompile Include="Juego2.cpp" />
+    <ClCompile Include="Juego2Reemplazo.cpp" />
     <ClCompile Include="Logica.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="ElejirJuego.cpp" />
